Fixed alignment by adjusting margin-right.

--- a/css/the-flavours/main.css
+++ b/css/the-flavours/main.css
@@ -59,7 +59,7 @@ ul:nth-child(2)>li:hover{
 	}
 
 	section>div:first-of-type>span:first-of-type{
-		margin-right: 15%;
+		margin-right: 10%;
 	}
 
 	section>div:first-of-type>span:nth-of-type(2){
@@ -67,7 +67,7 @@ ul:nth-child(2)>li:hover{
 	}
 	
 	section>div:last-of-type>span:first-of-type{
-		margin-right: 27%;
+		margin-right: 20%;
 	}
 
 	section>div:last-of-type>span:nth-of-type(2){
@@ -395,7 +395,10 @@ ul:nth-child(2)>li:hover{
 		margin-left: 240px;
 	}
 	
+	section>div:last-of-type>span:first-of-type{
+		margin-right: 75px;
+	}
 	section>div:last-of-type>span:nth-of-type(2){
-		margin-right: 25px;
+		margin-right: 27.5px;
 	}
 }
